tests/NormalTests/paczka1/fuzzy1/82227897.err
Error in line 8: Yz76NJA A803 81,3
Error in line 12: Yz76NJA S935 87,4
Error in line 26: vZm S935 19,a
Error in line 33: Kh92CiAmZ5 A803 121,1
Error in line 20: FpavB6 S447 57,5
